Fix css so contract displays properly on mobile

--- a/styles/contract.css
+++ b/styles/contract.css
@@ -1,15 +1,11 @@
-main div {
-  box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  border-radius: 10px;
-  margin: auto;
-}
-
 /* Target all <p> elements inside <div> elements within the <main> element (Just one now)*/
 main div p {
   font-size: 1.1em; 
   line-height: 1.2em; 
-  margin: auto;
   background-color: #007bff;
+  box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  border-radius: 10px;
+  margin: auto;
   padding: 20px;
   color: white;
   max-width: 55vw; 
